--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,27 @@
 body {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1 1 100vw;
-    margin: 3px;
+    margin: 50px 220px;
     background-color: rgb(20,20,30);
     font-family: 'DejaVu Sands Mono', monospace;
 }
 
-header {
-    flex: 1 1 100vw;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-main {
-    flex: 1 1 100vw;
+li {
+    float: right;
 }
 
-footer {
-    text-align: center;
-    flex: 1 1 100vw;
+li a {
+    display: block;
+    padding: 10px;
 }
-
-nav {
-    justify-content: center;
-    align-items: center;
-    flex: 1 1 100vw;
-}
-
 
 .intro {
-    text-align: center;
-    font-size: 20;
+    font-size: 150%;
     color: #cdd6f4;
 }
 
