--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
     font-family: 'DejaVu Sands Mono', monospace;
 }
 
+a {
+    text-decoration: none;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -21,7 +25,7 @@ li a {
 }
 
 .intro {
-    font-size: 150%;
+    font-size: 35px;
     color: #cdd6f4;
 }
 
